--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: default
 ---
 
-Hello there!
+<h2>Hello there!</h2>
 My name is Robin, and this is my portfolio site.  Have a look, and let me know if you have any questions!
