--- a/index.html
+++ b/index.html
@@ -3,4 +3,10 @@ layout: default
 ---
 
 <h2>Hello there!</h2>
-My name is Robin, and this is my portfolio site.  Have a look, and let me know if you have any questions!
+My name is Robin, and this is my portfolio site - developed with Jekyll goodness.  
+Have a look around, enjoy yourself, and let me know if you have any questions!
+
+
+<h3>OK, since you asked: A quick bit summary of my work/education history:</h3>
+
+2001: B.S. in <a href="https://tech.purdue.edu/degrees/computer-and-information-technology">Computer Technology</a>, Purdue University
