--- a/index.html
+++ b/index.html
@@ -9,4 +9,15 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
 
 <h3>OK, since you asked: A quick bit summary of my work/education history:</h3>
 
-2001: B.S. in <a href="https://tech.purdue.edu/degrees/computer-and-information-technology">Computer Technology</a>, Purdue University
+2001: B.S. in <a href="https://tech.purdue.edu/degrees/computer-and-information-technology">Computer and Information Technology</a>, Purdue University
+
+2002 - 2007:  Applications Developer/Analyst at Discover Financial Services, Northbrook, IL
+
+2007:  Freelance PHP web developer for <a href="http://www.dcinteractivegroup.com/">DC Interactive Group</a>, Elgin, IL
+
+2008 - 2013:  Sr. Software Engineer, University of Notre Dame, Hesburgh Library
+
+2010 - Present:  pursuing M.S. in <a href="http://www.cdm.depaul.edu/academics/pages/msinhuman-computerinteraction.aspx">Human-Computer Interaction</a> from DePaul University - about two-thirds complete
+
+2013 - Present:  Sr. User Experience Analyst, University of Notre Dame, Hesburgh Library
+
