--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
 
 <h3>OK, since you asked: A quick bit summary of my work/education history:</h3>
 
-2001: B.S. in <a href="https://tech.purdue.edu/degrees/computer-and-information-technology">Computer and Information Technology</a>, Purdue University
-<br /><br />
-2002 - 2007:  Applications Developer/Analyst at Discover Financial Services, Northbrook, IL
-<br /><br />
+<p>2001: B.S. in <a href="https://tech.purdue.edu/degrees/computer-and-information-technology">Computer and Information Technology</a>, Purdue University</p>
+
+<p>2002 - 2007:  Applications Developer/Analyst at Discover Financial Services, Northbrook, IL</p>
+
 2007:  Freelance PHP web developer for <a href="http://www.dcinteractivegroup.com/">DC Interactive Group</a>, Elgin, IL
 <br /><br />
 2008 - 2013:  Sr. Software Engineer, University of Notre Dame, Hesburgh Library
