--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
 
 <p>2002 - 2007:  Applications Developer/Analyst at Discover Financial Services, Northbrook, IL</p>
 
-2007:  Freelance PHP web developer for <a href="http://www.dcinteractivegroup.com/">DC Interactive Group</a>, Elgin, IL
-<br /><br />
-2008 - 2013:  Sr. Software Engineer, University of Notre Dame, Hesburgh Library
-<br /><br />
-2010 - Present:  pursuing M.S. in <a href="http://www.cdm.depaul.edu/academics/pages/msinhuman-computerinteraction.aspx">Human-Computer Interaction</a> from DePaul University - about two-thirds complete
-<br /><br />
-2013 - Present:  Sr. User Experience Analyst, University of Notre Dame, Hesburgh Library
-<br /><br />
+<p>2007:  Freelance PHP web developer for <a href="http://www.dcinteractivegroup.com/">DC Interactive Group</a>, Elgin, IL</p>
+
+<p>2008 - 2013:  Sr. Software Engineer, University of Notre Dame, Hesburgh Library</p>
+
+<p>2010 - Present:  pursuing M.S. in <a href="http://www.cdm.depaul.edu/academics/pages/msinhuman-computerinteraction.aspx">Human-Computer Interaction</a> from DePaul University (about two-thirds complete)</p>
+
+<p>2013 - Present:  Sr. User Experience Analyst, University of Notre Dame, Hesburgh Library</p>
+
