--- a/index.html
+++ b/index.html
@@ -2,12 +2,27 @@
 layout: default
 ---
 
-<h2>Hello there!</h2>
+<h1>Hello there!</h1>
 My name is Robin, and this is my portfolio site - developed with Jekyll goodness.  
 Have a look around, enjoy yourself, and let me know if you have any questions!
 
+<h2>First, a bit about me in bar graph form:</h2>
 
-<h3>OK, since you asked: A quick bit summary of my work/education history:</h3>
+<dl style="width: 300px">
+<dt>2008</dt>
+<dd><div id="data-one" class="bar" style="width: 60%"></div></dd>
+<dt>2009</dt>
+<dd><div id="data-two" class="bar" style="width: 80%"></div></dd>
+<dt>2010</dt>
+<dd><div id="data-three" class="bar" style="width: 64%">64%</div></dd>
+<dt>2011</dt>
+<dd><div id="data-four" class="bar" style="width: 97%">97%</div></dd>
+</dl>
+
+
+
+
+<h2>OK, since you asked: A quick bit summary of my work/education history:</h2>
 
 <p>2001: B.S. in <a href="https://tech.purdue.edu/degrees/computer-and-information-technology">Computer and Information Technology</a>, Purdue University</p>
 
@@ -20,4 +35,13 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
 <p>2010 - Present:  pursuing M.S. in <a href="http://www.cdm.depaul.edu/academics/pages/msinhuman-computerinteraction.aspx">Human-Computer Interaction</a> from DePaul University (about two-thirds complete)</p>
 
 <p>2013 - Present:  Sr. User Experience Analyst, University of Notre Dame, Hesburgh Library</p>
+
+
+
+*  You may notice a stunning lack of UX titles in my work summary.  It's true, UX came to me most through web development, but also during my systems analysis days at Discover (for which I think there are many similarities - some day I'll write a post about it :-)).
+
+Looking back, the reason I first got into computers in my undergrad was to write better retail software than what I'd worked with in my high school retail jobs.  (seriously, why would they ever put "Cancel Order" at F6, right next to "Pay Order" at F5?)
+My focus - and indeed, talent - is with understanding problems and turning them into actionable technological solutions.  
+While I've done some pretty cool software over the years, the truth is it's the analysis and design that turned it into something useful.
+
 
