--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
 
 <dl style="width: 300px">
 <dt>2008</dt>
-<dd><div id="data-one" class="bar" style="width: 60%"></div></dd>
+<dd><div id="data-one" class="bar-graph" style="width: 60%"></div></dd>
 <dt>2009</dt>
-<dd><div id="data-two" class="bar" style="width: 80%"></div></dd>
+<dd><div id="data-two" class="bar-graph" style="width: 80%"></div></dd>
 <dt>2010</dt>
-<dd><div id="data-three" class="bar" style="width: 64%">64%</div></dd>
+<dd><div id="data-three" class="bar-graph" style="width: 64%">64%</div></dd>
 <dt>2011</dt>
-<dd><div id="data-four" class="bar" style="width: 97%">97%</div></dd>
+<dd><div id="data-four" class="bar-graph" style="width: 97%">97%</div></dd>
 </dl>
 
 
