--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@ My name is Robin, and this is my portfolio site - developed with Jekyll goodness
 Have a look around, enjoy yourself, and let me know if you have any questions!
 
 <h2>First, a bit about me in bar graph form:</h2>
+<div id="data-one" class="bar-graph" style="width: 60%">Software Developer</div>
+
 
 <dl style="width: 300px">
 <dt>2008</dt>
