--- a/index.html
+++ b/index.html
@@ -7,9 +7,42 @@ My name is Robin, and this is my portfolio site - developed with Jekyll goodness
 Have a look around, enjoy yourself, and let me know if you have any questions!
 
 <h2>First, a bit about me in bar graph form:</h2>
-<div id="data-one" class="bar-graph" style="width: 60%">Software Developer</div>
+
+<h2>My UX Work:</h2>
+<div style="width:300px">
+  <div class="bar-graph" style="width: 90%">Personas, storyboarding, scenarios</div>
+  <div class="bar-graph" style="width: 100%">User Inquiry (via Interviews, Surveys, etc)</div>
+  <div class="bar-graph" style="width: 90%">Comparative Research</div>
+  <div class="bar-graph" style="width: 30%">Google Analytics</div>
+  <div class="bar-graph" style="width: 90%">SEO Techniques</div>
+  <div class="bar-graph" style="width: 60%">Information Architecture</div>
+  <div class="bar-graph" style="width: 90%">Wireframes/Prototyping (Axure)</div>
+  <div class="bar-graph" style="width: 60%">Mobile/Responsive Design</div>
+  <div class="bar-graph" style="width: 60%">Usability testing (Morae)</div>
+  <div class="bar-graph" style="width: 100%">Sketching ideas!</div>
+</div>
+
+<h2>Software Development:</h2>
+<div style="width:300px">
+  <div class="bar-graph" style="width: 60%">Ruby on Rails</div>
+  <div class="bar-graph" style="width: 50%">PHP</div>
+  <div class="bar-graph" style="width: 90%">Javascript/Coffeescript, libraries including jQuery, jQuery Mobile</div>
+  <div class="bar-graph" style="width: 60%">CSS/SCSS, Bootstrap Framework</div>
+  <div class="bar-graph" style="width: 60%">Database analysis, design, development (MySQL and Oracle)</div>
+  <div class="bar-graph" style="width: 60%">Data warehousing (ETL with Talend and Ab Initio and dimensional modeling)</div>
+  <div class="bar-graph" style="width: 100%">Sketching ideas!</div>
+</div>
 
 
+<div style="width:300px">
+  <div class="bar-graph" style="width: 90%">Inquisitive</div>
+  <div class="bar-graph" style="width: 100%">Creative</div>
+  <div class="bar-graph" style="width: 90%">Introverted</div>
+  <div class="bar-graph" style="width: 90%">Analytic</div>
+  <div class="bar-graph" style="width: 60%">Trying new things</div></div>
+  <div class="bar-graph" style="width: 90%">Learning</div>
+  <div class="bar-graph" style="width: 100%">Love sketching ideas!</div>
+</div>
 
 
 <h2>OK, since you asked: A quick bit summary of my work/education history:</h2>
