--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
 
 <h2>First, a bit about me in bar graph form:</h2>
 
+
+<div style="width:80%">
+  <div class="bar-graph" style="width: 90%">Inquisitive</div>
+  <div class="bar-graph" style="width: 100%">Creative</div>
+  <div class="bar-graph" style="width: 90%">Introverted</div>
+  <div class="bar-graph" style="width: 90%">Analytic</div>
+  <div class="bar-graph" style="width: 60%">Trying new things</div>
+  <div class="bar-graph" style="width: 90%">Learning</div>
+  <div class="bar-graph" style="width: 100%">Love sketching ideas!</div>
+</div>
+
 <h2>My UX Work:</h2>
-<div style="width:300px">
+<div style="width:80%">
   <div class="bar-graph" style="width: 90%">Personas, storyboarding, scenarios</div>
   <div class="bar-graph" style="width: 100%">User Inquiry (via Interviews, Surveys, etc)</div>
   <div class="bar-graph" style="width: 90%">Comparative Research</div>
@@ -23,7 +34,7 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
 </div>
 
 <h2>Software Development:</h2>
-<div style="width:300px">
+<div style="width:80%">
   <div class="bar-graph" style="width: 60%">Ruby on Rails</div>
   <div class="bar-graph" style="width: 50%">PHP</div>
   <div class="bar-graph" style="width: 90%">Javascript/Coffeescript, libraries including jQuery, jQuery Mobile</div>
@@ -33,16 +44,6 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
   <div class="bar-graph" style="width: 100%">Sketching ideas!</div>
 </div>
 
-
-<div style="width:300px">
-  <div class="bar-graph" style="width: 90%">Inquisitive</div>
-  <div class="bar-graph" style="width: 100%">Creative</div>
-  <div class="bar-graph" style="width: 90%">Introverted</div>
-  <div class="bar-graph" style="width: 90%">Analytic</div>
-  <div class="bar-graph" style="width: 60%">Trying new things</div></div>
-  <div class="bar-graph" style="width: 90%">Learning</div>
-  <div class="bar-graph" style="width: 100%">Love sketching ideas!</div>
-</div>
 
 
 <h2>OK, since you asked: A quick bit summary of my work/education history:</h2>
