--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
   <div class="bar-graph" style="width: 90%">Analytic</div>
   <div class="bar-graph" style="width: 60%">Trying new things</div>
   <div class="bar-graph" style="width: 90%">Learning</div>
-  <div class="bar-graph" style="width: 100%">Love sketching ideas!</div>
+  <div class="bar-graph" style="width: 100%">Sketcher!</div>
 </div>
 
 <h2>My UX Work:</h2>
