--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
 
 *  You may notice a stunning lack of UX titles in my work summary.  It's true, UX came to me most through web development, but also during my systems analysis days at Discover (for which I think there are many similarities - some day I'll write a post about it :-)).
 
-Looking back, the reason I first got into computers in my undergrad was to write better retail software than what I'd worked with in my high school retail jobs.  (seriously, why would they ever put "Cancel Order" at F6, right next to "Pay Order" at F5?)
-My focus - and indeed, talent - is with understanding problems and turning them into actionable technological solutions.  
-While I've done some pretty cool software over the years, the truth is it's the analysis and design that turned it into something useful.
+<p>Looking back, the reason I first got into computers in my undergrad was to write better retail software than what I'd worked with in my high school retail jobs.  (seriously, why would they ever put "Cancel Order" at F6, right next to "Pay Order" at F5?)</p>
+<p>My focus - and indeed, talent - is with understanding problems and turning them into actionable technological solutions.  </p>
+<p>While I've done some pretty cool software over the years, the truth is it's the analysis and design that turned it into something useful.</p>
 
 
