--- a/ux-work.html
+++ b/ux-work.html
@@ -23,22 +23,15 @@ permalink: /ux-work/
 This is my most recent completed project at the library - a pilot project for building a website about Father Hesburgh's role in the Civil Rights era.  
 The most notable challenge about this project is that the primary audience is for potential donors (think "flashy"), but it is intended to serve as a scholarly research tool.
 
-Presentation to upper management:
-Final report:  
 
-<h3>Digital Exhibits</h3>
-This is a current on-going project in which we will be developing software that allows curators within special collections and rare books to create online digital exhibits and collections.
-Since this is an internal project I didn't produce a presentation or final report, but here are some sample documents of research I've done.
-
-
-Personas:
-Feature Matrix:
+<p><a href="">Presentation to upper management</a></p>
+<p><a href="">Full final report</a></p>
 
 
 
 <h3>CurateND Project</h3>
 CurateND is an institutional repository project that has been ongoing by another team within my organization.  I've been asked to provide occasional UX design on a consultative basis for them, including "Responsive-izing" their design.
-Wireframes are produced by Axure.
+Axure Share Prototypes:  <a href="http://fxx75m.axshare.com">http://fxx75m.axshare.com</a>  (unfortunately at some point in upgrading Axure my responsive template bungled up)
 
 
 
