--- a/ux-work.html
+++ b/ux-work.html
@@ -4,7 +4,7 @@ permalink: /ux-work/
 ---
 
 <h2>UX Work, in bar graph form:</h2>
-<div style="width:80%">
+<div style="width:350px;">
   <div class="bar-graph" style="width: 90%">Personas, storyboarding, scenarios</div>
   <div class="bar-graph" style="width: 100%">User Inquiry (via Interviews, Surveys, etc)</div>
   <div class="bar-graph" style="width: 90%">Comparative Research</div>
