--- a/ux-work.html
+++ b/ux-work.html
@@ -24,7 +24,7 @@ This is my most recent completed project at the library - a pilot project for bu
 The most notable challenge about this project is that the primary audience is for potential donors (think "flashy"), but it is intended to serve as a scholarly research tool.
 
 
-<p><a href="/samples/FatherHesburghArchivesPresentation.pdf">Presentation to upper management</a></p>
+<p><a href="/samples/FatherHesburghArchivesPresentation.pdf">Presentation to upper management</a> Note: Mockups (p. 16-20) were done by a coworker, and the template design is a library standard, otherwise the content is mine</p>
 <p><a href="/samples/FatherHesburghFullReport.pdf">Full final report</a></p>
 
 
