--- a/about.html
+++ b/about.html
@@ -1,10 +1,9 @@
 ---
 layout: page
-title: About
+title: About Me!
 permalink: /about/
 ---
 
-<h2>About Me!</h2>
 Or, what I like to do in my free time:
  <ul>
   <li>Craft Beer</li>
