--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
 <h2>First, a bit about me in bar graph form:</h2>
 
 
-<div style="width:80%">
+<div style="width:350px;">
   <div class="bar-graph" style="width: 90%">Inquisitive</div>
   <div class="bar-graph" style="width: 100%">Creative</div>
   <div class="bar-graph" style="width: 90%">Introverted</div>
@@ -19,19 +19,6 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
   <div class="bar-graph" style="width: 100%">Sketcher!</div>
 </div>
 
-<h2>My UX Work:</h2>
-<div style="width:80%">
-  <div class="bar-graph" style="width: 90%">Personas, storyboarding, scenarios</div>
-  <div class="bar-graph" style="width: 100%">User Inquiry (via Interviews, Surveys, etc)</div>
-  <div class="bar-graph" style="width: 90%">Comparative Research</div>
-  <div class="bar-graph" style="width: 30%">Google Analytics</div>
-  <div class="bar-graph" style="width: 90%">SEO Techniques</div>
-  <div class="bar-graph" style="width: 60%">Information Architecture</div>
-  <div class="bar-graph" style="width: 90%">Wireframes/Prototyping (Axure)</div>
-  <div class="bar-graph" style="width: 60%">Mobile/Responsive Design</div>
-  <div class="bar-graph" style="width: 60%">Usability testing (Morae)</div>
-  <div class="bar-graph" style="width: 100%">Sketching ideas!</div>
-</div>
 
 <h2>Software Development:</h2>
 <div style="width:80%">
