--- a/software-development.html
+++ b/software-development.html
@@ -22,7 +22,7 @@ layout: default
 <p><a href="http://m.library.nd.edu">Mobile Library</a></p> 
  *  I also repackaged this as android and iOS apps using PhoneGap (the repository is available in github).  It, unfortunately, did not make it into the Apple Store.  They cited that it wasn't entertaining, which is true enough - since it's a library catalog.
 <p><a href="http://erm.library.nd.edu">CORAL Electronic Resource Management System (ERMS)</a></p> 
- *  This is the marketing site I developed to advertise the open-source ERMS project, called CORAL.  CORAL was the result of over two years of user-centered development work, presentations at conferences, and feedback and support from other institutions.  More than forty other confirmed institutions use CORAL, and there are now a handful of other sites who are regularly contributing to the code on GitHub.
+ *  This is a drupal marketing site I developed to advertise the open-source ERMS project, called CORAL.  CORAL was the result of over two years of user-centered development work, presentations at conferences, and feedback and support from other institutions.  More than forty other confirmed institutions use CORAL, and there are now a handful of other sites who are regularly contributing to the code on GitHub.
  
 
 
