--- a/software-development.html
+++ b/software-development.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <h2>Software Development:</h2>
-<div style="width:80%">
+<div style="width:350px;">
   <div class="bar-graph" style="width: 60%">Ruby on Rails</div>
   <div class="bar-graph" style="width: 50%">PHP</div>
   <div class="bar-graph" style="width: 90%">Javascript/Coffeescript, libraries including jQuery, jQuery Mobile</div>
