--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 ---
 layout: default
 ---
+<p>
+<img src="samples/RobinSchaaf.jpg" alt="Me" style="float:left;margin:0 5px 0 0;" />
 
 <h1>Hello there!</h1>
 My name is Robin, and this is my portfolio site - developed with Jekyll goodness.  
 Have a look around, enjoy yourself, and let me know if you have any questions!
+</p>
+
 
 <h2>First, a bit about me in bar graph form:</h2>
 
