--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
 <h2>First, a bit about me in bar graph form:</h2>
 
 <div style="width:350px;">
-  <div class="bar-graph" style="width: 90%">Inquisitive</div>
-  <div class="bar-graph" style="width: 100%">Creative</div>
-  <div class="bar-graph" style="width: 90%">Introverted</div>
-  <div class="bar-graph" style="width: 90%">Analytic</div>
-  <div class="bar-graph" style="width: 60%">Trying new things</div>
-  <div class="bar-graph" style="width: 90%">Learning</div>
-  <div class="bar-graph" style="width: 100%">Sketcher!</div>
+  <div class="bar-graph" style="width: 100%">Analyst</div>
+  <div class="bar-graph" style="width: 90%">Synthesist</div>
+  <div class="bar-graph" style="width: 90%">Visualizer</div>
+  <div class="bar-graph" style="width: 100%">Consensus-Builder</div>
+  <div class="bar-graph" style="width: 60%">Optimist</div>
+  <div class="bar-graph" style="width: 70%">Researcher</div>
+  <div class="bar-graph" style="width: 60%">Dreamer</div>
 </div>
 
 <h2>OK, since you asked: A quick bit summary of my work/education history:</h2>
