--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
 <div style="width:350px;">
   <div class="bar-graph" style="width: 100%">Analyst</div>
   <div class="bar-graph" style="width: 90%">Synthesist</div>
+  <div class="bar-graph" style="width: 90%">Empathizer</div>
   <div class="bar-graph" style="width: 90%">Visualizer</div>
-  <div class="bar-graph" style="width: 100%">Consensus-Builder</div>
   <div class="bar-graph" style="width: 60%">Optimist</div>
-  <div class="bar-graph" style="width: 70%">Researcher</div>
-  <div class="bar-graph" style="width: 60%">Dreamer</div>
+  <div class="bar-graph" style="width: 80%">Researcher</div>
+  <div class="bar-graph" style="width: 90%">Lifelong Learner</div>
 </div>
 
 <h2>OK, since you asked: A quick bit summary of my work/education history:</h2>
