--- a/my-process.html
+++ b/my-process.html
@@ -7,14 +7,14 @@ permalink: /my-process/
 <p>I don't have a typical process or approach.  A lot of the times I do what makes the most sense for the project (out of my UX toolkit), and what will be the most useful to others in the end.   With a few exceptions:</p>
 
  <ul>
-  <li>I pretty reliably use personas.  I realize they're somewhat controversial in the industry, and unfortunately the developers here don't take them too seriously (I'm working on that!)  Even if it's just me that looks at them I think they're helpful for my own design, especially while writing scenarios or storyboarding.  If I'm stuck, just being able to picture the user in the system often sparks new ideas and generates new perspectives.  So I'll continue using (and advocating for) them.</li>
-  <li>I also pretty reliably perform literature research.  I try to find academic articles, via Google Scholar or the ACM Database.  Although this practice will likely stop once I'm not at the library or in school, because to be honest I normally don't find very much actionable information.  I just like to know I'm covering all of my bases! </li>
-  <li>Lastly, I always perform comparative research, usually throughout the entire design process.  At the beginning of a project it's good to know what else is out there - who has solved this problem well?  Also to start with listing and comparing features. When I get stuck, I can usually get inspiration by seeing how other sites handle problems (and why reinvent the wheel?)</li>
+  <li><em>Personas</em>  I realize they're somewhat controversial in the industry, and unfortunately the developers here don't take them too seriously (I'm working on that!)  Even if it's just me that looks at them I think they're helpful for my own design, especially while writing scenarios or storyboarding.  If I'm stuck, just being able to picture the user in the system often sparks new ideas and generates new perspectives.  So I'll continue using (and advocating for) them.</li>
+  <li><em>Literature research</em>  I try to find academic articles, via Google Scholar or the ACM Database.  Although this practice will likely stop once I'm not at the library or in school, because to be honest I normally don't find very much actionable information.  I just like to know I'm covering all of my bases! </li>
+  <li><em>Comparative research</em>, usually throughout the entire design process.  At the beginning of a project it's good to know what else is out there - who has solved this problem well?  Also to start with listing and comparing features. When I get stuck, I can usually get inspiration by seeing how other sites handle problems (and why reinvent the wheel?)</li>
 </ul> 
 
 <p>Otherwise, it probably makes more sense for me to talk about some of the projects I've worked on, and the deliverables produced over the course of the project:</p>
 
-<h3>Library Website Information Architecture</h3>
+<h2>Library Website Information Architecture</h2>
 
 <p>This is my current project, so I can only talk about my process so far.  It is a fairly daunting project with some pretty big challenges - the library has never had any IA work, from what I can tell.  Our librarian who was responsible for the website content retired a few years ago, we tried in vain to replace him, and all the while a lot of the content grew outdated and new content was added by many different people but the rest of the site was never pruned.</p>
 Among the many issues (/problems/challenges?) I'm tackling:
@@ -30,7 +30,7 @@ Among the many issues (/problems/challenges?) I'm tackling:
 My first task was to write a <a href="/samples/IAProjectPlan.pdf">project proposal/plan</a>, which outlines my planned activities.  I also wrote up a <a href="/samples/IAPurposeStatement.pdf">purpose statement</a>, which aligns to the library's mission and vision, and as a way to drive my approach to the project.  
 Because of the sheer number of stakeholders I created a meeting plan/strategy, an introduction to <a href="/samples/IAHandout.pdf">IA handout</a>, and many different content inventory spreadsheets for each area.  I'm currently working on surveys, task analysis lists and existing google analytics data.  I'm working on paring down the content into a list that will lend itself to performing Card Sorts.
 
-<h3>Digital Exhibits</h3>
+<h2>Digital Exhibits</h2>
 The other type of project (much more typical of my work) is another ongoing project - in which we will be developing software that allows curators within special collections and rare books to create online exhibits and collections.
 
 My process for this project:
