--- a/about.html
+++ b/about.html
@@ -4,34 +4,38 @@ title: About Me!
 permalink: /about/
 ---
 
-<h2>First, a bit about me in bar graph form:</h2>
-<div style="width:350px;">
-<div class="bar-graph" style="width: 100%">Analyst</div>
-<div class="bar-graph" style="width: 90%">Synthesist</div>
-<div class="bar-graph" style="width: 90%">Empathizer</div>
-<div class="bar-graph" style="width: 90%">Visualizer</div>
-<div class="bar-graph" style="width: 60%">Optimist</div>
-<div class="bar-graph" style="width: 80%">Researcher</div>
-<div class="bar-graph" style="width: 90%">Lifelong Learner</div>
-</div>
+<h2>Full-Stack Developer</h2>
+I've been in database/web development since graduating with my B.S. in Computer Technology from Purdue in 2001.  Over the years, this has meant:
+ <ul>
+  <li>(The standards):  HTML, Javascript (yes, pre-jQuery!), CSS</li>
+  <li>Perl / Postgresql  - In my spare time I developed a user-content driven site, mailleartisans.org, which is still in use today.  This was done in about 2002, well before myspace started or other user content driven sites.  If only I'd picked something with broader appeal than chainmail! :-)</li>
+  <li>Coldfusion / Oracle, and some Java (while I worked for Discover Financial)</li>
+  <li>ETL Development, Data Mart/Data Warehousing with Ab Initio (also at Discover)</li>
+</ul>
+Since I've been at the library:
+<ul>
+  <li>ETL and Report Development using JasperETL, Unix shell scripts and Perl for the custom built reporting front end against Oracle.  This was later rewritten to MySQL for cost/maintainability reasons, and now I know all about <del>repairing</del> running MyISAM tables in a large data environment :-)</li>
+  <li>PHP / MySQL</li>
+  <li>Ruby on Rails / JQuery / CoffeeScript / SCSS / Microdata via schema.org</li>
+  <li>Mobile site development using a combination of Rails, JQuery Mobile and iOS and Android apps via PhoneGap</li>
+</ul>
 
-<h2>OK, since you asked: A quick bit summary of my work/education history:</h2>
-<p>2001: B.S. in <a href="https://tech.purdue.edu/degrees/computer-and-information-technology">Computer and Information Technology</a>, Purdue University</p>
-<p>2002 - 2007: Applications Developer/Analyst at Discover Financial Services, Northbrook, IL</p>
-<p>2007: Freelance PHP web developer for <a href="http://www.dcinteractivegroup.com/">DC Interactive Group</a>, Elgin, IL</p>
-<p>2008 - 2013: Sr. Software Engineer, University of Notre Dame, Hesburgh Library</p>
-<p>2010 - Present: pursuing M.S. in <a href="http://www.cdm.depaul.edu/academics/pages/msinhuman-computerinteraction.aspx">Human-Computer Interaction</a> from DePaul University (about two-thirds complete)</p>
-<p>2013 - Present: Sr. User Experience Analyst, University of Notre Dame, Hesburgh Library</p>
-* You may notice a stunning lack of UX titles in my work summary. It's true, UX came to me most through web development, but also during my systems analysis days at Discover (for which I think there are many similarities - some day I'll write a post about it :-)).
-<p>Looking back, the reason I first got into computers in my undergrad was to write better retail software than what I'd worked with in my high school retail jobs. (seriously, why would they ever put "Cancel Order" at F6, right next to "Pay Order" at F5?)</p>
-<p>My focus - and indeed, talent - is with understanding problems and turning them into actionable technological solutions. While I've done some pretty cool software over the years, the truth is it's the analysis and design that turned it into something useful.</p>
+
+<h2>With a UX Obsession</h2>
+I've always been a developer, but by far I'm best at figuring out how to use software to solve problems for users.  It's what drove me to choose to get into computers in the first place - in my high school retail work we had to use a point-of-sale system which used the F5 key to finish the order - right next to the F4 key that completely wipe out the order, without verification first.  (seriously, though, who would do this ?!)
+I knew that I could write better software than that.
+
+<h2>What Drives Me</h2>
+Being in an agile workplace, I'm interested in figuring out ways to integrate UX work with the fast-moving/ever iterating sprints.
 
 
 And, what I like to do in my free time:
  <ul>
-  <li>Craft Beer</li>
+  <li>Craft Beer, brewhouses</li>
+  <li>Various house projects - especially decorating, browsing pinterest or ikeahackers for inspiration</li>
   <li>Biking/Cycling (but not at the same time as craft beer)</li>
-  <li>Playing board games with friends, especially Dominion</li>
-  <li>Playing bass guitar or piano</li>
-  <li>Creating/designing jewelry</li>
+  <li>Playing board games with friends, especially Dominion :-)</li>
+  <li>Playing games on iPad.  I used to do video games a lot more heavily but the Angry Birds, etc. are so addictive!</li>
+  <li>Playing bass guitar or piano.  I've been in a few bands in the Chicago-land area - Ballistic Edna, Livid Vivian and Burnside Bridge</li>
+  <li>Creating/designing chainmail and other metal jewelry</li>
 </ul>
