--- a/about.html
+++ b/about.html
@@ -22,8 +22,12 @@ Since I've been at the library:
 
 
 <h2>With a UX Obsession</h2>
-I've always been a developer, but by far I'm best at figuring out how to use software to solve problems for users.  It's what drove me to choose to get into computers in the first place - in my high school retail work we had to use a point-of-sale system which used the F5 key to finish the order - right next to the F4 key that completely wipe out the order, without verification first.  (seriously, though, who would do this ?!)
+I've long been a developer, but by far I'm best at figuring out how to use software to solve problems for users.  
+It's what drove me to choose to get into computers in the first place when I was in high school - my coworkers and I had to use such a poorly designed point-of-sale system - and I knew I could write better softrware than that. (For example, the F5 key would complete the order - but right next to it the F4 key would completely wipe out the order, and without verification first.  Seriously, though, who would do this ?!)
 I knew that I could write better software than that.
+<br /><br />
+In 2010 I decided to get my Master's degree in Human-Computer Interaction from DePaul, after having written and open sourcing a successful electronic resources management system (ERMS), for which I invested a lot of energy into learning about usability and understanding the problemset and workflow from the subject matter experts, and developed it using an iterative design process.  It paid off for the project - the ERMS has been adopted and is in use in about 50 confirmed institutions (many more unknown), and even has a handful of developers from other institutions that continue to contribute and maintain to the codebase on github.  As a developer, it has been incredibly gratifying that there are user groups and presentations about the software being done at conferences that I'm not even a part of!  
+<br />It also cemented my interest in usability and design - because no doubt, it wasn't the code that worked so well - but that users enjoy using the interface and it solves the types of issues they face every day.
 
 <h2>What Drives Me</h2>
 Being in an agile workplace, I'm interested in figuring out ways to integrate UX work with the fast-moving/ever iterating sprints.
@@ -31,7 +35,7 @@ Being in an agile workplace, I'm interested in figuring out ways to integrate UX
 
 And, what I like to do in my free time:
  <ul>
-  <li>Craft Beer, brewhouses</li>
+  <li>Craft Beer, visiting breweries</li>
   <li>Various house projects - especially decorating, browsing pinterest or ikeahackers for inspiration</li>
   <li>Biking/Cycling (but not at the same time as craft beer)</li>
   <li>Playing board games with friends, especially Dominion :-)</li>
