--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ permalink: /about/
 ---
 
 <h2>Full-Stack Developer</h2>
-I've been in database/web development since graduating with my B.S. in Computer Technology from Purdue in 2001.  Over the years, this has meant:
+I've been in database/web development since getting my B.S. in Computer Technology from Purdue in 2001.  Over the years, this has meant:
  <ul>
   <li>(The standards):  HTML, Javascript (yes, pre-jQuery!), CSS</li>
   <li>Perl / Postgresql  - In my spare time I developed a user-content driven site, mailleartisans.org, which is still in use today.  This was done in about 2002, well before myspace started or other user content driven sites.  If only I'd picked something with broader appeal than chainmail! :-)</li>
@@ -21,23 +21,34 @@ Since I've been at the library:
 </ul>
 
 
-<h2>With a UX Obsession</h2>
+<h2>With a UX interest</h2>
 I've long been a developer, but by far I'm best at figuring out how to use software to solve problems for users.  
-It's what drove me to choose to get into computers in the first place when I was in high school - my coworkers and I had to use such a poorly designed point-of-sale system - and I knew I could write better softrware than that. (For example, the F5 key would complete the order - but right next to it the F4 key would completely wipe out the order, and without verification first.  Seriously, though, who would do this ?!)
-I knew that I could write better software than that.
+This is what drove me to choose to get into computers in the first place when I was in high school in a retail job - we used a poorly designed point-of-sale system and I knew I could come up with better softrware than that. (As an illustration - the F5 key would complete the order - but right next to it the F4 key would void the sale, and without verifying first.  It is incredibly frustrating to accidentally cancel an order and have to re-ring everything, in front of the customer.  Seriously, though, who would do this ?!)
 <br /><br />
-In 2010 I decided to get my Master's degree in Human-Computer Interaction from DePaul, after having written and open sourcing a successful electronic resources management system (ERMS), for which I invested a lot of energy into learning about usability and understanding the problemset and workflow from the subject matter experts, and developed it using an iterative design process.  It paid off for the project - the ERMS has been adopted and is in use in about 50 confirmed institutions (many more unknown), and even has a handful of developers from other institutions that continue to contribute and maintain to the codebase on github.  As a developer, it has been incredibly gratifying that there are user groups and presentations about the software being done at conferences that I'm not even a part of!  
-<br />It also cemented my interest in usability and design - because no doubt, it wasn't the code that worked so well - but that users enjoy using the interface and it solves the types of issues they face every day.
-
-<h2>What Drives Me</h2>
-Being in an agile workplace, I'm interested in figuring out ways to integrate UX work with the fast-moving/ever iterating sprints.
+In 2010 I decided to get my Master's degree in Human-Computer Interaction from DePaul, after having written and open sourcing a successful electronic resources management system (ERMS), for which I invested a lot into learning about usability and understanding the problemset and workflow, and developed it using an iterative design process.  It paid off for the project - the ERMS has been adopted and is in use in about 50 confirmed institutions (many more unknown), and even has a handful of developers from other institutions that continue to contribute and maintain to the codebase on github.  As a developer, it has been incredibly gratifying that to find out about user groups and presentations about the software being done at conferences that I'm not even a part of!  
+<br />The project also cemented my interest in usability and design - because without a doubt, it wasn't the code that drove CORAL's success - but that users enjoy using the interface and it solves the types of issues they face every day.  (though, perhaps the flexible data model helps :-) )
+<br />Anyway, in February 2014 I changed my job at the library to focus on library UX.  I've finished about two-thirds of my master's degree and will probably be slowly chugging away at it for another year or two.
 
 
-And, what I like to do in my free time:
+<h2>Areas of special interest</h2>
+The following are areas that I love to learn about and draw inspiration from - and ultimately would love my work in some way to affect:
+ <ul>
+  <li>Fitness and nutrition, or other lifestyle choices</li>
+  <li>Learning how the brain works - how technology and our environment work together to affect our motivation and emotions</li>
+  <li>Developmental disorders - especially Autism and ADHD, and the use of technology and games for emotion and developing affect (I wrote a dissertation about this subject)</li>
+  <li>Arts and Entertainment - especially within music, fashion or interior design</li>
+  <li>Digital scholarship/librarianship and learning</li>
+  <li>Broadly speaking, the way that technology can fit into our lives to make us more productive, happy and fulfilled</li>
+</ul>
+
+
+<h2>And, what I like to do in my free time:</h2>
  <ul>
   <li>Craft Beer, visiting breweries</li>
   <li>Various house projects - especially decorating, browsing pinterest or ikeahackers for inspiration</li>
   <li>Biking/Cycling (but not at the same time as craft beer)</li>
+  <li>Runnning (and some 5ks)</li>
+  <li>Yoga</li>
   <li>Playing board games with friends, especially Dominion :-)</li>
   <li>Playing games on iPad.  I used to do video games a lot more heavily but the Angry Birds, etc. are so addictive!</li>
   <li>Playing bass guitar or piano.  I've been in a few bands in the Chicago-land area - Ballistic Edna, Livid Vivian and Burnside Bridge</li>
