--- a/about.html
+++ b/about.html
@@ -42,9 +42,9 @@ The following are areas that I love to learn about and draw inspiration from - a
 </ul>
 
 
-<h2>And, what I like to do in my free time:</h2>
+<h2>In addition, the things that I like to do in my free time:</h2>
  <ul>
-  <li>Craft Beer, visiting breweries</li>
+  <li>Craft beer, visiting breweries</li>
   <li>Various house projects - especially decorating, browsing pinterest or ikeahackers for inspiration</li>
   <li>Biking/Cycling (but not at the same time as craft beer)</li>
   <li>Runnning (and some 5ks)</li>
