--- a/software-development.html
+++ b/software-development.html
@@ -2,16 +2,22 @@
 layout: default
 ---
 
-<h2>Software Development:</h2>
-<div style="width:350px;">
-  <div class="bar-graph" style="width: 60%">Ruby on Rails</div>
-  <div class="bar-graph" style="width: 50%">PHP</div>
-  <div class="bar-graph" style="width: 90%">Javascript/Coffeescript, libraries including jQuery, jQuery Mobile</div>
-  <div class="bar-graph" style="width: 60%">CSS/SCSS, Bootstrap Framework</div>
-  <div class="bar-graph" style="width: 60%">Database analysis, design, development (MySQL and Oracle)</div>
-  <div class="bar-graph" style="width: 60%">Data warehousing (ETL with Talend and Ab Initio and dimensional modeling)</div>
-  <div class="bar-graph" style="width: 100%">Sketching ideas!</div>
-</div>
+<h2>Full-Stack Developer</h2>
+I've been in database/web development since getting my B.S. in Computer Technology from Purdue in 2001. Over the years, this has meant:
+<ul>
+<li>(The standards): HTML, Javascript (yes, pre-jQuery!), CSS</li>
+<li>Perl / Postgresql - In my spare time I developed a user-content driven site, mailleartisans.org, which is still in use today. This was done in about 2002, well before myspace started or other user content driven sites. If only I'd picked something with broader appeal than chainmail! :-)</li>
+<li>Coldfusion / Oracle, and some Java (while I worked for Discover Financial)</li>
+<li>ETL Development, Data Mart/Data Warehousing with Ab Initio (also at Discover)</li>
+</ul>
+Since I've been at the library:
+<ul>
+<li>ETL and Report Development using JasperETL, Unix shell scripts and Perl for the custom built reporting front end against Oracle. This was later rewritten to MySQL for cost/maintainability reasons, and now I know all about <del>repairing</del> running MyISAM tables in a large data environment :-)</li>
+<li>PHP / MySQL</li>
+<li>Ruby on Rails / JQuery / CoffeeScript / SCSS / Microdata via schema.org</li>
+<li>Mobile site development using a combination of Rails, JQuery Mobile and iOS and Android apps via PhoneGap</li>
+</ul>
+
 
 <h2>View my work</h2>
 <p><a href="https://github.com/robinschaaf">GitHub Profile</a></p>
