--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <p>
-<img src="samples/RobinSchaaf.jpg" alt="Me" style="float:left;margin:0 10px 0 0;max-height:130px;" />
+<img src="images/me.png" alt="Me" style="float:left;margin:0 10px 0 0;max-height:130px;" />
 
 <h1>Hello there!</h1>
 My name is Robin, and this is my portfolio site - developed with Jekyll goodness.  
