--- a/software-development.html
+++ b/software-development.html
@@ -22,7 +22,8 @@ Since I've been at the library:
 <h2>View my work</h2>
 <p><a href="https://github.com/robinschaaf">GitHub Profile</a></p>
 <p><a href="http://library.nd.edu/directory">Library Employee Directory</a></p>
- *  This is my most recent application developed last year.  Unfortunately, it requires a log in to see the user-administration end which is pretty cool.  It allows employees to self-administer - including a markdown editor for their "About" section.  This was developed using Rails and various gems, using coffeescript and scss.
+<img src="images/emp_dir.png" /><br />
+ <p class="small">*  This is my most recent application developed last year.  Unfortunately, it requires a log in to see the user-administration end which is pretty cool.  It allows employees to self-administer - including a markdown editor for their "About" section.  This was developed using Rails and various gems, using coffeescript and scss.</p>
 <p>Bibliographic Cataloging Statistics</p>
  *  This is an internal application, I'll have screenshots coming soon!
 <p><a href="http://m.library.nd.edu">Mobile Library</a></p> 
