--- a/software-development.html
+++ b/software-development.html
@@ -24,12 +24,15 @@ Since I've been at the library:
 <p><a href="http://library.nd.edu/directory">Library Employee Directory</a></p>
 <img src="images/emp_dir.png" style="float:left;" /><img src="images/emp_dir2.png" style="float:right;" /><br />
  <p class="small">*  This is my most recent application developed last year.  Unfortunately, it requires a log in to see the user-administration end which is pretty cool.  It allows employees to self-administer - including a markdown editor for their "About" section.  This was developed using Rails and various gems, using coffeescript and scss.</p>
+ <br />
 <p>Bibliographic Cataloging Statistics</p>
- *  This is an internal application, I'll have screenshots coming soon!
+ <p class="small">*  This is an internal application, I'll have screenshots coming soon!</p>
+ <br />
 <p><a href="http://m.library.nd.edu">Mobile Library</a></p> 
- *  I also repackaged this as android and iOS apps using PhoneGap (the repository is available in github).  It, unfortunately, did not make it into the Apple Store.  They cited that it wasn't entertaining, which is true enough - since it's a library catalog.
+ <p class="small">*  I also repackaged this as android and iOS apps using PhoneGap (the repository is available in github).  It, unfortunately, did not make it into the Apple Store.  They cited that it wasn't entertaining, which is true enough - since it's a library catalog.</p>
+<br />
 <p><a href="http://erm.library.nd.edu">CORAL Electronic Resource Management System (ERMS)</a></p> 
- *  This is a drupal marketing site I developed to advertise the open-source ERMS project, called CORAL.  CORAL was the result of over two years of user-centered development work, presentations at conferences, and feedback and support from other institutions.  More than forty other confirmed institutions use CORAL, and there are now a handful of other sites who are regularly contributing to the code on GitHub.
+ <p class="small">*  This is a drupal marketing site I developed to advertise the open-source ERMS project, called CORAL.  CORAL was the result of over two years of user-centered development work, presentations at conferences, and feedback and support from other institutions.  More than forty other confirmed institutions use CORAL, and there are now a handful of other sites who are regularly contributing to the code on GitHub.</p>
  
 
 
