--- a/software-development.html
+++ b/software-development.html
@@ -22,7 +22,7 @@ Since I've been at the library:
 <h2>View my work</h2>
 <p><a href="https://github.com/robinschaaf">GitHub Profile</a></p>
 <p><a href="http://library.nd.edu/directory">Library Employee Directory</a></p>
-<div class="clearfix">
+<div class="container clearfix">
   <div class="section"><img src="images/emp_dir.png" /></div>
   <div class="section"><img src="images/emp_dir2.png" /></div>
 </div>
