--- a/index.html
+++ b/index.html
@@ -2,10 +2,29 @@
 layout: default
 ---
 <p>
-<img src="images/me.png" alt="Me" style="float:left;margin:0 10px 0 0;max-height:130px;" />
+<img src="images/me.png" alt="Me" style="float:left;margin:0 10px 0 0;max-height:170px;" />
 
 <h1>Hello there!</h1>
 My name is Robin, and this is my portfolio site - developed with Jekyll goodness.  
 Have a look around, enjoy yourself, and let me know if you have any questions!
 </p>
 
+2>Full-Stack Developer</h2>
+I've been in database/web development since getting my B.S. in Computer Technology from Purdue in 2001.
+
+<ul>
+<li>The standards: HTML, Javascript (yes, pre-jQuery!), CSS</li>
+<li>About two years of Ruby on Rails / JQuery / CoffeeScript / SCSS</li>
+<li>MySQL</li>
+<li>PHP</li>
+<li>Mobile site development using a combination of Rails, JQuery Mobile and iOS and Android apps via PhoneGap</li>
+<li>ETL and Report Development using JasperETL, Unix shell scripts and Perl for the custom built reporting front end against Oracle. This was later rewritten to MySQL for cost/maintainability reasons, and now I know all about <del>repairing</del> running MyISAM tables in a large data environment :-)</li>
+</ul>
+
+
+Prior to the library:
+<ul>
+<li>Perl / Postgresql - In my spare time I developed a user-content driven site, mailleartisans.org, which is still in use today. This was done in about 2002, well before myspace started or other user content driven sites. If only I'd picked something with broader appeal than chainmail! :-)</li>
+<li>Coldfusion / Oracle, and some Java (while I worked for Discover Financial)</li>
+<li>ETL Development, Data Mart/Data Warehousing with Ab Initio (also at Discover)</li>
+</ul>
