--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@ My name is Robin, and this is my portfolio site - developed with Jekyll goodness
 Have a look around, enjoy yourself, and let me know if you have any questions!
 </p>
 
-2>Full-Stack Developer</h2>
+<h2>Full-Stack Developer</h2>
 I've been in database/web development since getting my B.S. in Computer Technology from Purdue in 2001.
 
 <ul>
-<li>The standards: HTML, Javascript (yes, pre-jQuery!), CSS</li>
-<li>About two years of Ruby on Rails / JQuery / CoffeeScript / SCSS</li>
-<li>MySQL</li>
-<li>PHP</li>
+<li>The standards: HTML / Javascript (pre-jQuery and with) / CoffeeScript / CSS / SCSS</li>
+<li>Ruby on Rails / PHP / MySQL</li>
 <li>Mobile site development using a combination of Rails, JQuery Mobile and iOS and Android apps via PhoneGap</li>
 <li>ETL and Report Development using JasperETL, Unix shell scripts and Perl for the custom built reporting front end against Oracle. This was later rewritten to MySQL for cost/maintainability reasons, and now I know all about <del>repairing</del> running MyISAM tables in a large data environment :-)</li>
 </ul>
