--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 ---
 layout: default
 ---
-<p>
+<div class="clearfix">
 <img src="images/me.png" alt="Me" style="float:left;margin:0 10px 0 0;max-height:170px;" />
-
 <h1>Hello there!</h1>
 My name is Robin, and this is my portfolio site - developed with Jekyll goodness.  
 Have a look around, enjoy yourself, and let me know if you have any questions!
-</p>
+</div>
 
 <h2>Full-Stack Developer</h2>
 I've been in database/web development since getting my B.S. in Computer Technology from Purdue in 2001.
