--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ I've been in database/web development since getting my B.S. in Computer Technolo
 
 <ul>
 <li>The standards: HTML / Javascript (pre-jQuery and with) / CoffeeScript / CSS / SCSS</li>
-<li>Ruby on Rails / PHP / MySQL</li>
+<li>Ruby on Rails (~2 years) / PHP / MySQL</li>
 <li>Mobile site development using a combination of Rails, JQuery Mobile and iOS and Android apps via PhoneGap</li>
 <li>ETL and Report Development using JasperETL, Unix shell scripts and Perl for the custom built reporting front end against Oracle. This was later rewritten to MySQL for cost/maintainability reasons, and now I know all about <del>repairing</del> running MyISAM tables in a large data environment :-)</li>
 </ul>
