--- a/software-development.html
+++ b/software-development.html
@@ -2,14 +2,6 @@
 layout: default
 ---
 
-<h2>Full-Stack Developer</h2>
-I've been in database/web development since getting my B.S. in Computer Technology from Purdue in 2001. Over the years, this has meant:
-<ul>
-<li>(The standards): HTML, Javascript (yes, pre-jQuery!), CSS</li>
-<li>Perl / Postgresql - In my spare time I developed a user-content driven site, mailleartisans.org, which is still in use today. This was done in about 2002, well before myspace started or other user content driven sites. If only I'd picked something with broader appeal than chainmail! :-)</li>
-<li>Coldfusion / Oracle, and some Java (while I worked for Discover Financial)</li>
-<li>ETL Development, Data Mart/Data Warehousing with Ab Initio (also at Discover)</li>
-</ul>
 Since I've been at the library:
 <ul>
 <li>ETL and Report Development using JasperETL, Unix shell scripts and Perl for the custom built reporting front end against Oracle. This was later rewritten to MySQL for cost/maintainability reasons, and now I know all about <del>repairing</del> running MyISAM tables in a large data environment :-)</li>
@@ -22,11 +14,12 @@ Since I've been at the library:
 <h2>View my work</h2>
 <p><a href="https://github.com/robinschaaf">GitHub Profile</a></p>
 <p><a href="http://library.nd.edu/directory">Library Employee Directory</a></p>
+<p class="small">This is my most recent application developed last year, developed using Rails and various gems, using coffeescript and scss.  Unfortunately, it requires a log in to see the user-administration which allows employees to self-administer - including a markdown editor for their "About" section.</p>
 <div class="clearfix">
   <div class="section"><img src="images/emp_dir.png" style="float:left;" /></div>
   <div class="section"><img src="images/emp_dir2.png" style="float:right;" /></div>
 </div>
- <p class="small">*  This is my most recent application developed last year.  Unfortunately, it requires a log in to see the user-administration end which is pretty cool.  It allows employees to self-administer - including a markdown editor for their "About" section.  This was developed using Rails and various gems, using coffeescript and scss.</p>
+ 
  <br />
 <p>Bibliographic Cataloging Statistics</p>
 <br />
@@ -42,3 +35,9 @@ Since I've been at the library:
  
 
 
+Prior to the library:
+<ul>
+<li>Perl / Postgresql - In my spare time I developed a user-content driven site, mailleartisans.org, which is still in use today. This was done in about 2002, well before myspace started or other user content driven sites. If only I'd picked something with broader appeal than chainmail! :-)</li>
+<li>Coldfusion / Oracle, and some Java (while I worked for Discover Financial)</li>
+<li>ETL Development, Data Mart/Data Warehousing with Ab Initio (also at Discover)</li>
+</ul>
